Complete the Attached Properties for password box
Complete the Attached Properties for password box.
1st we learn how attached property is done in Standard way.
Then we learn how to use the generics to first create a BaseAttachedProperty class. Which is our base class for attached properties.
Then we use our base class to create HasText property and MonitorPassword property.
After doing these things, we hook up the visibility password box with these 2 propertes.
But we run into an issue.
Which is solved by using converter method.
In this converter class we just use a boolean.

--- a/Fasetto.Word/Fasetto.Word/Fasetto.Word.csproj
+++ b/Fasetto.Word/Fasetto.Word/Fasetto.Word.csproj
@@ -67,12 +67,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AttachedProperties\BaseAttachedProperty.cs" />
+    <Compile Include="AttachedProperties\PasswordBoxAttachedProperties.cs" />
     <Compile Include="DataModels\ApplicationPage.cs" />
     <Compile Include="Pages\LogInPage.xaml.cs">
       <DependentUpon>LogInPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AttachedProperties\PasswordBoxPropertiesForTutorial.cs" />
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
+    <Compile Include="ValueConverters\BooleanToVisibiltyConvertor.cs" />
     <Compile Include="ViewModel\Base\BaseViewModel.cs" />
     <Compile Include="ViewModel\Base\RelayCommand.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
